# gigen

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/gitignore_io/: error.rs  mod.rs
