[package]
name = "gigen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line program to generate .gitingore file using gitignore.io API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] } # https://hyper.rs/
hyper-tls = "0.5.0" # https://docs.rs/hyper-native-tls/0.3.0/hyper_native_tls/ 
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
